# pax

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  TODO.md  backlog-archive.md  build.sh  design-exploration.md  lab-journal-ss.md  lab-journal-zb-2024.md  lab-journal-zb.md  optimized-serve.sh  release.py  run-web.sh  run.sh  serve-web.sh  serve.sh
carbon/: Cargo.toml
carbon-compiler/: Cargo.toml
carbon-compiler/src/: dash.pest  main.rs
carbon-template-compiler/: Cargo.toml
carbon-template-compiler/dev-samples/: basic-plus.dash  basic.dash  data.json
carbon-template-compiler/src/: dash.pest  json.pest  main.rs  template.pest
carbon/src/: engine.rs  expressions.rs  lib.rs  metaruntime.rs  rendering.rs  runtime.rs  scene_graph.rs  timeline.rs
pax-cartridge/: Cargo.toml
pax-cartridge-runtime/: Cargo.toml
pax-cartridge-runtime/src/: lib.rs
pax-cartridge/pax-properties-coproduct/: Cargo.toml
pax-cartridge/src/: lib.gen.rs  lib.rs
pax-chassis-common/: Cargo.toml
pax-chassis-common/pax-swift-cartridge/: Package.swift  rebuild-xcframework.sh
pax-chassis-common/pax-swift-common/: Package.swift
pax-chassis-common/src/: core_graphics_c_bridge.rs  lib.rs
pax-chassis-ios/: Cargo.toml
pax-chassis-ios/src/: lib.rs
pax-chassis-macos/: Cargo.gen.toml  Cargo.toml  README.md  add_asset.sh
pax-chassis-macos/interface/: Paxchassismacos-Bridging-Header.h
pax-chassis-macos/pax-dev-harness-macos/: build.sh  run-debuggable-mac-app.sh
pax-chassis-macos/src/: lib.rs  paxchassismacos.h
pax-chassis-web/: Cargo.toml  build-interface.sh  deploy-jabberwocky.sh  package-lock.json
pax-chassis-web/basic-web-static/: index.ts  package.json  webpack.config.js
pax-chassis-web/interface/: package-lock.json  run-web.sh  tsconfig.json  webpack.config.js  webpack.prod.js
pax-chassis-web/pax-dev-harness-web/: index.html  index.ts  package-lock.json  package.json  run-web.sh  stats-js.d.ts  tsconfig.json  webpack.config.js  webpack.prod.js
pax-chassis-web/src/: lib.rs  web_render_contexts.rs
pax-cli/: Cargo.toml
pax-cli/src/: http.rs  main.rs
pax-compiler/: .gitignore  Cargo.toml  README.md  build.rs  run-example.sh
pax-compiler/dev-samples/: basic-plus.dash  basic-plus.pax  basic.dash  basic.pax
pax-compiler/new-libdev-project-template/: Cargo.toml.template
pax-compiler/new-project-template/: Cargo.toml.template
pax-compiler/pax-create-template/: Cargo.toml
pax-compiler/src/: code_serialization.rs  compiletime.rs  expressions.rs  helpers.rs  lib.rs  main.exclude.rs  main.rs  manifest.rs  parser.rs  parsing.rs  pax.pest  reflection.rs  server.rs  source_map.rs  templates.rs  templating.rs
pax-compiler/templates/: cartridge-component-factory.tera  cartridge-lib.tera  cartridge-render-node-literal.tera  mod.rs  properties-coproduct-lib.tera
pax-compiler/tests/: designtime_integration_test.rs  file_changed_notification_test.rs  manifest_serialization_test.rs  test_code_serialization.rs
pax-component-library/: Cargo.toml
pax-component-library/src/: button.rs  common.rs  dialogs.rs  dropdown.rs  lib.rs  radio_set.rs  resizable.rs  slider.rs  table.rs  tabs.rs  text.rs  toast.rs
pax-core/: Cargo.toml
pax-core/src/: api.rs  component.rs  conditional.rs  constants.rs  declarative_macros.rs  designer.rs  designtime.rs  engine.rs  expressions.rs  form_event.rs  layout.rs  lib.rs  numeric.rs  placeholder.rs  properties.rs  rendering.rs  repeat.rs  runtime.rs  slot.rs  timelines.rs
pax-core/tests/: any_properties_tests.rs  declarative_macro_tests.rs
pax-design-server/: Cargo.toml  README.md
pax-design-server/pax-design-server/: .env.template  .gitignore  Cargo.toml  build.rs
pax-designer/: Cargo.toml  architecture.excalidraw
pax-designer/pax-designer/: .gitignore  Cargo.toml  architecture.excalidraw  helpers.sh  publish.sh  reload.sh  run.sh
pax-designer/src/: designer_node_type.rs  granular_change_store.rs  granular_manifest_change_notification_store.rs  lib.pax  lib.rs  math.rs  message_log_display.pax  message_log_display.rs  utils.rs
pax-designtime/: .gitignore  Cargo.toml  initial_manifest.json  pax.pest
pax-designtime/src/: action.rs  input.rs  lib.rs  main.rs  messages.rs  priveleged_agent.rs  privileged_agent.rs  selection.rs  setup.rs  undo.rs
pax-designtime/tests/: test.rs
pax-engine/: Cargo.toml  README.md
pax-engine/src/: lib.rs
pax-example/: Cargo.toml  design-exploration.md  pax  run.sh
pax-example/.pax/: reexports.partial.rs  types.gen.rs  types.partial.rs  types.rs
pax-example/.pax-manual/: Cargo.generated.toml
pax-example/components/: camera.pax  camera.rs  color_grid.pax  fireworks.pax  fireworks.rs  grids.rs  hello_rgb.pax  words.pax  words.rs
pax-example/examples/: jabberwocky.rs
pax-example/src/: _manifest.rs  camera.pax  camera.rs  clickable-square.rs  example.pax  fireworks.pax  fireworks.rs  grids.pax  grids.rs  hello_rgb.pax  hello_rgb.rs  lib-expanded.rs  lib.pax  lib.rs  main-01.ts  main-expanded.rs  main.pax  main.rs  main.ts  pax-example.pax  website_desktop.pax  website_desktop.rs  website_mobile.pax  website_mobile.rs  words.pax  words.rs
pax-generation/: .env.example  .gitignore  Cargo.toml  prompt-app.html  system_prompt.txt  system_prompt_v2.txt  system_prompt_v3.txt
pax-generation/generated_project/: Cargo.toml
pax-generation/src/: lib.rs  main.rs
pax-kit/: Cargo.toml
pax-kit/src/: lib.rs
pax-lang/: Cargo.toml  README.md
pax-lang/src/: helpers.rs  lib.rs  parsing.rs  pax.pest
pax-language-server/: Cargo.toml
pax-language-server/src/: completion.rs  index.rs  lib.rs  main.rs  positional.rs
pax-macro/: Cargo.toml
pax-macro/src/: lib.rs  parsing.rs  templating.rs
pax-macro/templates/: derive_pax.stpl  pax.stpl  pax_primitive.stpl  pax_type.stpl
pax-manifest/: Cargo.toml
pax-manifest/src/: constants.rs  helpers.rs  lib.rs  parsing.rs  pax.pest  server.rs  utils.rs
pax-message/: Cargo.toml
pax-paxel-interpreter/: Cargo.toml
pax-pixels/: Cargo.toml
pax-property/: Cargo.toml
pax-runtime-api/: Cargo.toml
(+1278 files in other folders)
