[package]
name = "pax-monorepo"
version = "0.22.0"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>"]
edition = "2021"

[workspace]
members = [
    "pax-chassis-web",
    "pax-chassis-macos",
    "pax-chassis-ios",
    "pax-chassis-common",
    "pax-engine",
    "pax-runtime",
    "pax-runtime-api",
    "pax-macro",
    "pax-message",
    "pax-compiler",
    "pax-cli",
    "pax-std",
    "pax-manifest",
    "pax-lang",
    "pax-language-server",
    "pax-designtime",
    "pax-design-server",
    "pax-designer",
]

exclude = [
    "pax-compiler/files",
    "examples",
    "tests",
    "pax-generation",
]

[profile.release]
lto = true
opt-level = "z" 
codegen-units = 1  
