[package]
name = "pax"
version = "0.22.0"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>", "Samuel Selleck <samuel@pax.dev>"]
edition = "2021"

[workspace]
members = [
    "pax-chassis-common",
    "pax-chassis-ios",
    "pax-chassis-macos",
    "pax-chassis-web",
    "pax-cli",
    "pax-compiler",
    "pax-compiler",
    "pax-designtime",
    "pax-engine",
    "pax-lang",
    "pax-language-server",
    "pax-macro",
    "pax-manifest",
    "pax-message",
    "pax-runtime",
    "pax-runtime-api",
    "pax-std",
]

exclude = [
    "pax-compiler/files",
    "pax-designer",
    "examples",
    "tests",
    "pax-generation",
]

[profile.release]
lto = true
opt-level = "z" 
codegen-units = 1  
