[package]
name = "pax"
version = "0.28.0"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>", "Samuel Selleck <samuel@pax.dev>"]
edition = "2021"

[workspace]
members = [
    "pax-chassis-common",
    "pax-chassis-ios",
    "pax-chassis-macos",
    "pax-chassis-web",
    "pax-cli",
    "pax-compiler",
    "pax-compiler",
    "pax-designtime",
    "pax-engine",
    "pax-kit",
    "pax-lang",
    "pax-language-server",
    "pax-macro",
    "pax-manifest",
    "pax-message",
    "pax-runtime",
    "pax-runtime-api",
    "pax-std",
]

exclude = [
    "pax-compiler/files",
    "examples",
    "tests",
    "pax-generation",
    "pax-designer", # cannot build workspace without designtime when this is present in workspace (because it hard-codes designtime=on)
]

[profile.release]
lto = true
opt-level = "z" 
codegen-units = 1  
