[package]
name = "carbon-compiler"
version = "0.1.0"
authors = ["Zack Brown <zack@zpad.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#
#[lib]
#crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
carbon = { path = "../carbon"}
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"

wasm-bindgen = {version = "0.2.30", features=["serde-serialize"]}
#++serde = {version = "1.0", features=["derive"]}
#++serde-wasm-bindgen = "0.1.3"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.10"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "Event"]
