[package]
name = "carbon-template-compiler"
version = "0.1.0"
authors = ["Zack Brown <zack@zpad.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#
#[lib]
#crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
piet = "0.3.1"
piet-web = "0.3.1"
carbon = { path = "../carbon"}
pest = "2.1.3"

wasm-bindgen = {version = "0.2.30", features=["serde-serialize"]}
#++serde = {version = "1.0", features=["derive"]}
#++serde-wasm-bindgen = "0.1.3"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.10"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "Event"]
