[package]
name = "carbon"
version = "0.1.0"
authors = ["Zack Brown <zack@zpad.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet = "0.3.1"
piet-web = "0.3.1"
kurbo = "0.7.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = "0.3.1"
wasm-bindgen = "0.2.59"

