[package]
name = "pax-cartridge-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pax-core = {path = "../pax-core"}
pax-example = {path = "../pax-example"}
pax-std-primitives = {path = "../pax-std/pax-std-primitives"}
