[package]
name = "pax-cartridge"
version = "0.11.5"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Static program definition container for Pax programs, intended to be patched during compilation"

[dependencies]
piet-common = "0.6.0"
pax-runtime = {path = "../pax-runtime", version = "0.11.5"}
pax-std-primitives = {path = "../pax-std/pax-std-primitives", version = "0.11.5"}