[package]
name = "pax-cartridge"
version = "0.12.8"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Static program definition container for Pax programs, intended to be patched during compilation"

[features]
default = ["pax-manifest/parsing"]

[dependencies]
piet-common = "0.6.0"
pax-runtime = {path = "../pax-runtime", version = "0.12.8"}
pax-runtime-api = {path = "../pax-runtime-api", version = "0.12.8"}
pax-engine = {path = "../pax-engine", version = "0.12.8"}
pax-std-primitives = {path = "../pax-std/pax-std-primitives", version = "0.12.8"}
pax-manifest = {path = "../pax-manifest", version = "0.12.8"}
serde_json = "1.0.95"

[profile.release]
lto = true
opt-level = "z" 
codegen-units = 1  