[package]
name = "pax-chassis-common"
version = "0.8.0"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
description = "Shared resources for Pax Chassis"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
include = ["src/**/*","pax-swift-common/**/*"]

[workspace]

[lib]