[package]
name = "pax-chassis-common"
version = "0.10.2"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
description = "Shared resources for Pax Chassis"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
include = ["src/**/*","pax-swift-common/**/*"]

[workspace]

[lib]

[dependencies]
piet = "0.6.0"
piet-coregraphics = "0.6.0"
pax-core = { path = "../pax-core", version="0.10.2" }
pax-cartridge = {path="../pax-cartridge", version="0.10.2"}
pax-message = {path = "../pax-message", version="0.10.2"}
pax-runtime-api = {path = "../pax-runtime-api", version="0.10.2"}
pax-properties-coproduct = {path="../pax-properties-coproduct", version="0.10.2"}
lazy_static = "1.4.0"
mut_static = "5.0.0"
#be cautious about core-graphics' version number --
#ideally this would be locked with `piet` (the specified version should exactly match the version used
#internally by piet-coregraphics, e.g. 0.6.0 => 0.22.3)
core-graphics = "0.22.3"
serde = "1.0.159"
flexbuffers = "2.0.0"
