[package]
name = "pax-chassis-macos"
edition = "2021"
version = "0.9.1"
authors = ["Zack Brown <zack@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as native macOS apps"

[lib]
name = "paxchassismacos"
crate-type = ["staticlib", "cdylib"]

[dependencies]
piet = "0.6.0"
piet-coregraphics = "0.6.0"
pax-core = { path = "../pax-core", version="0.9.1" }
pax-cartridge = {path="../pax-cartridge", version="0.9.1"}
pax-message = {path = "../pax-message", version="0.9.1"}
pax-runtime-api = {path = "../pax-runtime-api", version="0.9.1"}
pax-properties-coproduct = {path="../pax-properties-coproduct", version="0.9.1"}
lazy_static = "1.4.0"
mut_static = "5.0.0"
#be cautious about core-graphics' version number --
#ideally this would be locked with `piet` (the specified version should exactly match the version used
#internally by piet-coregraphics, e.g. 0.6.0 => 0.22.3)
core-graphics = "0.22.3"
serde = "1.0.159"
flexbuffers = "2.0.0"


# The following empty [workspace] directive is a workaround to satisfy
# a cargo workspace bug, as documented: https://github.com/rust-lang/cargo/issues/6745
[workspace]