[package]
name = "pax-chassis-macos"
edition = "2021"
version = "0.10.7"
authors = ["Zack Brown <zack@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as native macOS apps"

[lib]
name = "paxchassismacos"
crate-type = ["cdylib"]

[dependencies]
pax-pixels = {path = "../pax-pixels"}
pax-chassis-common = { path = "../pax-chassis-common", version="0.10.7" }
pax-core = { path = "../pax-core", version="0.10.7" }
pax-cartridge = {path="../pax-cartridge", version="0.10.7"}
pax-message = {path = "../pax-message", version="0.10.7"}
pax-runtime-api = {path = "../pax-runtime-api", version="0.10.7"}
pax-properties-coproduct = {path="../pax-properties-coproduct", version="0.10.7"}
lazy_static = "1.4.0"
mut_static = "5.0.0"
serde = "1.0.159"
flexbuffers = "2.0.0"