[package]
name = "pax-chassis-macos"
edition = "2021"
version = "0.11.5"
authors = ["Zack Brown <zack@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as native macOS apps"

[lib]
name = "paxchassismacos"
crate-type = ["cdylib"]

[dependencies]
piet = "0.6.0"
piet-coregraphics = "0.6.0"
pax-chassis-common = { path = "../pax-chassis-common", version="0.11.5" }
pax-runtime = { path = "../pax-runtime", version="0.11.5" }
pax-cartridge = {path="../pax-cartridge", version="0.11.5"}
pax-message = {path = "../pax-message", version="0.11.5"}
lazy_static = "1.4.0"
mut_static = "5.0.0"
#be cautious about core-graphics' version number --
#ideally this would be locked with `piet` (the specified version should exactly match the version used
#internally by piet-coregraphics, e.g. 0.6.0 => 0.22.3)
core-graphics = "0.22.3"
flexbuffers = "2.0.0"
