[package]
name = "pax-chassis-web"
version = "0.15.5"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as Web apps"
include = ["/src", "/interface/public"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
piet = "0.6.0"
piet-web = "0.6.0"
pax-runtime = { path = "../pax-runtime", version="0.15.5" }
pax-cartridge = {path="../pax-cartridge", version="0.15.5"}
pax-message = {path = "../pax-message", version="0.15.5"}
pax-runtime-api = { path = "../pax-runtime-api", version="0.15.5" }
pax-manifest = {path="../pax-manifest", version="0.15.5"}
serde-wasm-bindgen = "0.6"
wasm-bindgen = {version = "0.2.80", features=["serde-serialize"]}
wasm-bindgen-futures = "0.4"
serde_json = "1.0.95"
console_log = "1.0.0"
log = "0.4.20"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.63"

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Navigator",
  "console",
  "CanvasRenderingContext2d",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "HtmlCollection",
  "Response",
  "ResponseType",
  "Location",
]

[profile.release]
lto = true
# opt-level = "z" 
codegen-units = 1  

[profile.dev]
opt-level = 3 
