[package]
name = "pax-chassis-web"
version = "0.21.1"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as Web apps"
include = ["/src", "/interface/public"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
designtime = ["pax-designtime", "pax-runtime/designtime"]

[dependencies]
piet = "0.6.0"
piet-web = "0.6.0"
pax-runtime = { path = "../pax-runtime", version="0.21.1" }
pax-message = {path = "../pax-message", version="0.21.1"}
pax-runtime-api = { path = "../pax-runtime-api", version="0.21.1" }
pax-manifest = {path="../pax-manifest", version="0.21.1"}
pax-designtime = {path="../pax-designtime", version="0.21.1", optional=true}
serde-wasm-bindgen = "0.6"
wasm-bindgen = {version = "0.2.92", features=["serde-serialize"]}
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0.95"
console_log = "1.0.0"
log = "0.4.20"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.63"

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Navigator",
  "console",
  "CanvasRenderingContext2d",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "HtmlCollection",
  "Response",
  "ResponseType",
  "Location",
]

