[package]
name = "pax-chassis-web"
version = "0.23.0"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Platform-specific chassis allowing Pax cartridges to be executed as Web apps"
include = ["/src", "/interface/public"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
designtime = ["pax-designtime", "pax-runtime/designtime"]

[dependencies]
piet = "0.6.0"
piet-web = "0.6.0"
pax-runtime = { path = "../pax-runtime", version="0.23.0" }
pax-message = {path = "../pax-message", version="0.23.0"}
pax-runtime-api = { path = "../pax-runtime-api", version="0.23.0" }
pax-manifest = {path="../pax-manifest", version="0.23.0"}
pax-designtime = {path="../pax-designtime", version="0.23.0", optional=true}
serde-wasm-bindgen = "0.6"
wasm-bindgen = {version = "0.2.92", features=["serde-serialize"]}
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0.95"
log = "0.4.20"
js-sys = "0.3.63"

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Navigator",
  "console",
  "CanvasRenderingContext2d",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "HtmlCollection",
  "Response",
  "ResponseType",
  "Location",
]

