[package]
name = "pax-cli"
version = "0.5.6"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Command line interface tool for developing, packaging, and managing Pax projects"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pax-compiler = {path = "../pax-compiler", version = "0.5.6"}
