[package]
name = "pax-cli"
version = "0.12.8"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Command line interface tool for developing, packaging, and managing Pax projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
clap = "2.33.3"
pax-compiler = {path = "../pax-compiler", version = "0.12.8"}
rustc_version = "0.4.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0.0"
reqwest = "0.11.18"
signal-hook = "0.3"
nix = "0.20.2"
pax-language-server = {version = "0.12.8"}
color-eyre = "0.6.2"
