[package]
name = "pax-cli"
version = "0.38.0"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Command line interface tool for developing, packaging, and managing Pax projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
clap = "2.33.3"
color-eyre = "0.6.2"
colored = "2.0.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
nix = "0.20.2"
pax-compiler = {path = "../pax-compiler", version = "0.38.0"}
pax-lang = {path = "../pax-lang", version = "0.38.0"}
pax-language-server = {path = "../pax-language-server", version = "0.38.0"}
reqwest = "0.11.18"
rustc_version = "0.4.0"
tokio = { version = "1", features = ["full"] }