[package]
name = "pax-compiler"
version = "0.21.0"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Compiler APIs for parsing and building Pax projects into application executables"
include = [
    "files/**/*",
    "src/**/*",
    "templates/**/*",
    "README.md",
]


[features]
default = ["console_error_panic_hook","json"]
json = ["serde_json"]
designtime = []

[lib]

[dependencies]
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
cargo_metadata = "0.18.1"
color-eyre = "0.6.2"
colored = "2.0.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
env_logger = "0.9"
flate2 = "1.0"
fs_extra = "1.3.0"
futures = "0.3.28"
include_dir = {version = "0.7.3", features = ["glob"]}
itertools = "0.10.5"
kurbo = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
nix = "0.20.2"
pax-manifest = {version= "0.21.0", path="../pax-manifest"}
pax-message = {version = "0.21.0", path="../pax-message"}
pax-runtime = {path = "../pax-runtime", version="0.21.0" }
pax-runtime-api = {path = "../pax-runtime-api", version="0.21.0" }
portpicker = "0.1.1"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
pax-lang = {version = "0.21.0", path="../pax-lang"}
rand = "0.8.4"
regex = "1"
reqwest = { version = "0.11.18", features = ["blocking"] }
rust-format = "0.3.4"
serde = { version = "1.0.159", features=["derive"], optional = true }
serde_derive = "1.0.159"
serde_json = { version = "1.0.95", optional = true }
serde_with = { version= "3.6.1", features = ["json"]} 
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
tar = "0.4"
tera = "1"
tokio = { version = "1", features = ["full"] }
toml_edit = "0.14.4"
uuid = {version = "0.8", features = ["v4"] }
walkdir = "2.3.2"
wasm-bindgen = {version = "0.2.92", features=["serde-serialize"]}
