[package]
name = "pax-compiler"
version = "0.35.0"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Compiler APIs for parsing and building Pax projects into application executables"
include = [
    "files/**/*",
    "!files/interfaces/web/node_modules/**/*",
    "!files/interfaces/web/package-lock.json",
    "templates/**/*",
    "src/**/*",
    "/README.md",
]

[features]
default = ["json"]
json = ["serde_json"]

[lib]

[dependencies]
actix = "0.13.1"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.3.0"
actix-http = "3.6"
async-openai = "0.19.0"
cargo_metadata = "0.18.1"
color-eyre = "0.6.2"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9"
fs_extra = "1.3.0"
include_dir = {version = "0.7.3", features = ["glob"]}
itertools = "0.10.5"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
notify = "6.1.1"
pax-manifest = {version= "0.35.0", path="../pax-manifest"}
pax-message = {version = "0.35.0", path="../pax-message"}
pax-runtime = {path = "../pax-runtime", version="0.35.0" }
pax-runtime-api = {path = "../pax-runtime-api", version="0.35.0" }
pax-designtime = { path = "../pax-designtime", version = "0.35.0" }
pax-generation = { path="../pax-generation", version = "0.35.0"}
proc-macro2 = { version = "1.0", features = ["span-locations"] }
pax-lang = {version = "0.35.0", path="../pax-lang"}
rand = "0.8.4"
regex = "1"
reqwest = { version = "0.11.18", features = ["blocking"] }
rmp-serde = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.159", features=["derive"] }
serde_derive = "1.0.159"
serde_json = { version = "1.0.95", optional = true }
serde_with = { version= "3.6.1", features = ["json"] }
similar = "2.2.1"
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
toml_edit = "0.14.4"
walkdir = "2.3.2"
wasm-bindgen = { version = "0.2.92", features=["serde-serialize"] }

[dev-dependencies]
actix-test = "0.1.2"
awc = "3.3.0"
futures-util = "0.3.30"
tempfile = "3.9.0"
serde_json = { version = "1.0.95"}