[package]
name = "pax-core"
version = "0.0.1"
authors = ["Zack Brown <zack@pax-lang.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet = "0.5.0"
piet-common = "0.5.0"
wee_alloc = "0.4.5"
piet-web = "0.5.0"
kurbo = "0.8.3"
pax-properties-coproduct = { path = "../pax-properties-coproduct"}
pax-runtime-api = {path = "../pax-runtime-api"}
pax-message = {path = "../pax-message"}
lazy_static = "1.4.0"
wasm-bindgen = {version = "0.2.30", features=["serde-serialize"]}


[features]
designtime = []


[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = "0.5.0"
wasm-bindgen = { version = "0.2.59", features = ["serde-serialize"] }


[patch.'file:///Users/zack/code/pax-lang/pax-properties-coproduct']
pax-properties-coproduct = {path = "../pax-cartridge/pax-properties-coproduct"}
#
#[patch.'file://../pax-properties-coproduct']
#pax-properties-coproduct = { path = "../pax-example/.pax-manual/patches/pax-properties-coproduct"}
