[package]
name = "pax-core"
version = "0.9.7"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Core shared runtime and rendering engine for Pax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet = "0.6.0"
piet-common = "0.6.0"
kurbo = "0.9.0"
pax-properties-coproduct = { path="../pax-properties-coproduct", version="0.9.7" }
pax-runtime-api = {path = "../pax-runtime-api", version="0.9.7"}
pax-message = {path = "../pax-message", version="0.9.7"}
wasm-bindgen = {version = "0.2.30", features=["serde-serialize"]}


[features]
designtime = []
