[package]
name = "pax-design-server"
version = "0.22.0"
edition = "2021"
description = "Development managing for visual editor and file system"

[[bin]]
name = "pax-design-server"
path = "src/main.rs"

[features]
default = ["serde", "serde_json", "designtime"]
designtime = ["pax-compiler/designtime"]

[dependencies]
actix = "0.13.1"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.3.0"
actix-http = "3.6"

bytes = "1.5.0"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.30"
include_dir = {version = "0.7.3", features = ["glob"]}
notify = "6.1.1"
pax-compiler = { path = "../pax/pax-compiler", version = "0.22.0" }
pax-designtime = { path = "../pax/pax-designtime", version = "0.22.0" }
pax-manifest = { path="../pax/pax-manifest", version = "0.22.0"}
pax-lang = { path="../pax/pax-lang", version = "0.22.0"}
pax-generation = { path="../pax/pax-generation", version = "0.22.0"}
rmp-serde = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.159", features=["derive"], optional = true }
serde_derive = "1.0.159"
serde_json = { version = "1.0.95", optional = true }
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
tera = "1"


[dev-dependencies]
actix-test = "0.1.2"
awc = "3.3.0"
futures-util = "0.3.30"
tempfile = "3.9.0"
serde_json = { version = "1.0.95"} 
