[package]
name = "pax-designer"
version = "0.24.0"
edition = "2021"
default-run = "run"
include = ["assets/**/*"]

[dependencies]
pax-engine = { version = "0.24.0",  path = "../pax-engine", features = ["designtime"] }
pax-std = { version = "0.24.0",  path = "../pax-std", features = ["designtime"] }
pax-designtime = {version = "0.24.0", path = "../pax-designtime"}
anyhow = "1.0.79"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser", "designtime"]

[[bin]]
name = "run"
path = "bin/run.rs"

[features]
default = ["designtime"]
parser = ["pax-std/parser"]
designtime = [] #no-op feature; designtime is hardwired for pax-designer
web = ["pax-engine/web"]
macos = ["pax-engine/macos"]
ios = ["pax-engine/ios"]

[profile.release]
lto = true
opt-level = "z"

[profile.dev.package."*"]
debug = false
