[package]
name = "pax-designer"
version = "0.38.0"
edition = "2021"
authors = ["Zack Brown <zack@pax.dev>","Warfa Jibril <warfa@pax.dev>","Samuel Selleck <samuel@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Vector design tool for developing Pax user interfaces"
include = ["src/**/*", "assets/**/*"]

[dependencies]
pax-engine = { version = "0.38.0",  path = "../pax-engine", features = ["designtime"] }
pax-std = { version = "0.38.0",  path = "../pax-std", features = ["designtime"] }
pax-designtime = {version = "0.38.0", path = "../pax-designtime"}
anyhow = "1.0.79"
convert_case = "0.6.0"
bezier-rs = "0.4.0"
glam = { version = "0.24.2", features = ["serde"] }
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.15", features = ["js"] }
percent-encoding = "2.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser", "designtime"]

[features]
default = ["designtime"]
parser = ["pax-std/parser"]
designtime = [] #no-op feature; designtime is hardwired for pax-designer
web = ["pax-engine/web"]
macos = ["pax-engine/macos"]
ios = ["pax-engine/ios"]

[profile.release]
lto = true
opt-level = "z"

[profile.dev.package."*"]
debug = false
