[package]
name = "pax-designtime"
version = "0.23.0"
edition = "2021"
authors = ["Warfa Jibril <warfa@pax.dev>", "Zack Brown <zack@pax.dev>"]
homepage = "https://pax.dev/"
description = "Debug-mode-style extension to the Pax Engine runtime, enabling runtime introspection and manipulation of definitions as needed for designability"
license = "MIT OR Apache-2.0"

[features]
default = ["serde", "serde_json", "pax-manifest/parsing"]

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.0"
ewebsock = "0.4.0"
getrandom = {version ="0.2.12", features=["js"]}
include_dir = {version = "0.7.3", features = ["glob"]}
itoa = "1.0.10"
log = "0.4.20"
pax-manifest = {version = "0.23.0", path="../pax-manifest"}
rmp-serde = "1.1.2"
serde = { version = "1.0.159", features=["derive"], optional = true }
serde_derive = "1.0.159"
serde_json = { version = "1.0.95", optional = true }
tera = "1"
toml_edit = "0.21.0"
wasm-bindgen = {version = "0.2.92"}
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
