[package]
name = "pax-engine"
version = "0.15.5"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Root import entry-point for using Pax in a Rust program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pax-macro = {path="../pax-macro", version="0.15.5"}
pax-manifest = {path="../pax-manifest", version="0.15.5"}
pax-message = {path="../pax-message", version="0.15.5"}
pax-runtime = {path="../pax-runtime", version="0.15.5"}
pax-compiler = {path="../pax-compiler", optional=true, version="0.15.5"}
pax-chassis-web = {version = "0.15.5", path="../pax-chassis-web", optional=true }
pax-chassis-macos = {version = "0.15.5", path="../pax-chassis-macos", optional=true }
pax-chassis-ios = {version = "0.15.5", path="../pax-chassis-ios", optional=true }
serde_json = {version = "1.0.95"}
wasm-bindgen = {version = "0.2.92", optional=true}
wasm-bindgen-futures = {version = "0.4.42", optional=true}
log = "0.4.20"

[features]
parser = ["dep:pax-compiler"]
designtime = ["pax-runtime/designtime", "pax-chassis-web/designtime", "pax-chassis-macos/designtime", "pax-chassis-ios/designtime"]
web = ["dep:pax-chassis-web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
macos = ["dep:pax-chassis-macos"]
ios = ["dep:pax-chassis-ios"]
